--- a/platformio.ini
+++ b/platformio.ini
@@ -9,10 +9,10 @@ lib_deps =
     WiFiClientSecure
 
 [env:esp32doit-devkit-v1]
-platform = espressif32
+platform = espressif32@3.5.0
 board = esp32doit-devkit-v1
 framework = arduino
 upload_speed = 921600
-upload_port = COM6
+upload_port = /dev/ttyUSB0
 monitor_speed = 115200
-monitor_port = COM6
+monitor_port = /dev/ttyUSB0
